--- a/vtr-ui/src/styles.scss
+++ b/vtr-ui/src/styles.scss
@@ -1497,7 +1497,7 @@ vtr-ui-smart-performance-scanning {
 
 .slider-note {
 	margin-right: 0.8rem;
-	padding-left: 1rem;
+	padding-left: 1.5rem;
 	.vtr-ui-rounded-rectangle-radio {
 		width: 13rem !important;
 		height: 5rem !important;
